<resources>
    <string name="app_name">File Manager</string>

    <string name="external_storage_denied_rationale_title">No Storage Permission</string>
    <string name="external_storage_denied_rationale_message">Please grant it to access file system</string>
    <string name="permission_grant">GRANT</string>
    <string name="permission_deny">DENY</string>

    <string name="title_thumbnail">Thumbnail</string>

    <string name="title_multimedia">Multimedia</string>
    <string name="title_audio">Music</string>
    <string name="title_video">Video</string>
    <string name="title_docs">Documents</string>

    <string name="title_images">Images</string>

    <string name="title_gallery">Gallery</string>
    <string name="title_library">Library</string>

    <string name="title_folders">Folders</string>

    <string name="title_apps">Apps</string>
    <string name="title_transfer_pc">PC Transfer</string>
    <string name="title_cloud">Cloud</string>
    <string name="title_apks">APKs</string>
    <string name="title_trash">Trash</string>

    <string name="title_search">Search</string>
    <string name="title_sort">Sort</string>
    <string name="title_sort_by">Sort by</string>
    <string name="title_rename_to">Rename to</string>

    <string name="title_internal_storage">Internal Storage</string>
    <string name="title_external_storage">SD Card</string>

    <string name="external_storage_do_not_ask_again_selected_rationale_message">Please grant it to access file system \n(from app settings)</string>
    <string name="title_settings">Settings</string>
    <string name="title_edit">Edit</string>
    <string name="title_rename_enter_valid">Enter valid file name</string>
    <string name="title_file_already_exists">File with given name already exists</string>

    <string name="sort_option_date_recent">Date (recent)</string>
    <string name="sort_option_date_oldest">Date (oldest)</string>
    <string name="sort_option_size_largest">Size (largest)</string>
    <string name="sort_option_size_smallest">Size (smallest)</string>
    <string name="sort_option_name_alphabetic">Name (alphabetic)</string>
    <string name="sort_option_name_reversed">Name (reversed)</string>
    <string name="toolbar_delete">Delete</string>
    <string name="toolbar_share">Share</string>
    <string name="toolbar_copy">Copy</string>
    <string name="toolbar_move">Move</string>
    <string name="toolbar_info">Info</string>
    <string name="title_details">Details</string>
    <string name="toolbar_rename">Rename</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="title_confirm">Confirm</string>
    <string name="go_back">Go back</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_deletion_prompt_multiple_items">%1$s items will be deleted forever</string>
    <string name="title_deletion_prompt_single_item">%1$s item will be deleted forever</string>
    <string name="title_deletion_prompt_multiple_albums">%1$s albums and all items inside will be deleted forever</string>
    <string name="title_deletion_prompt_single_album">%1$s album and all items inside will be deleted forever</string>

    <string name="warning_items_size_too_large">Size of items is too large</string>
    <string name="info_path">Path:</string>
    <string name="info_size">Size:</string>
    <string name="info_total_size">Total size:</string>
    <string name="info_name">Name:</string>
    <string name="info_date_added">Date added:</string>
    <string name="info_total_quantity">Total:</string>
    <string name="info_total_quantity_files_single">%1$s file</string>
    <string name="info_total_quantity_files_multiple">%1$s files</string>
    <string name="info_total_quantity_folders_single">(%1$s folder)</string>
    <string name="info_total_quantity_folders_multiple">(%1$s folders)</string>
    <string name="title_no_images">No Images</string>
    <string name="title_no_folders">No Folders</string>
    <string name="title_no_audio">No Audio</string>
    <string name="title_no_video">No Video</string>
    <string name="title_no_docs">No Documents</string>
    <string name="title_no_apks">No Apks</string>

    <string name="title_search_hint">Search …</string>
    <string name="title_toolbar_options">Options</string>
    <string name="title_options">Options</string>
    <string name="change_list">Change List</string>
    <string name="about_app">About app</string>

    <string name="search_folders">Search folders</string>
    <string name="search_files">Search files</string>
    <string name="search_images">Search images</string>
    <string name="clear">Clear query</string>

    <string name="more">More</string>
    <string name="clear_selection">Clear selection</string>
    <string name="menu">Menu</string>
    <string name="this_will_clear_your_selection">This will clear your selection</string>
</resources>