<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sectionAppBarMenuItemClearSearch"
        android:icon="@drawable/ic_baseline_cancel_24"
        android:title="@string/clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/sectionAppBarMenuItemSort"
        android:title="@string/title_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/sectionAppBarMenuItemSettings"
        android:title="@string/title_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/sectionAppBarMenuItemAboutApp"
        android:title="@string/about_app"
        app:showAsAction="never" />

</menu>