<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBaseDialogRootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBaseDialogContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layoutBaseDialogRootLayoutGl10pv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layoutBaseDialogRootLayoutGl85pv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layoutBaseDialogRootLayoutGl90pv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layoutBaseDialogRootLayoutGl15pv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBaseDialogTitleContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toStartOf="@+id/layoutBaseDialogRootLayoutGl85pv"
            app:layout_constraintStart_toStartOf="@+id/layoutBaseDialogRootLayoutGl15pv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/layoutBaseDialogTitle"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:shadowColor="@android:color/white"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/external_storage_denied_rationale_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/layoutBaseDialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/layoutBaseDialogRootLayoutGl90pv"
            app:layout_constraintStart_toStartOf="@+id/layoutBaseDialogRootLayoutGl10pv"
            app:layout_constraintTop_toBottomOf="@+id/layoutBaseDialogTitleContainer"
            tools:text="@string/external_storage_denied_rationale_message" />

        <TextView
            android:id="@+id/layoutBaseDialogNegativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="?attr/selectableItemBackground"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layoutBaseDialogPositiveButton"
            app:layout_constraintTop_toBottomOf="@+id/layoutBaseDialogMessage"
            tools:text="@string/permission_deny" />

        <TextView
            android:id="@+id/layoutBaseDialogPositiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="?attr/selectableItemBackground"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layoutBaseDialogRootLayoutGl90pv"
            app:layout_constraintTop_toBottomOf="@+id/layoutBaseDialogMessage"
            tools:text="@string/permission_grant" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>