<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSheetInfoLibraryRootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_modal_sheet"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/fragmentSheetInfoLibraryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragmentSheetInfoLibraryContentLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragmentSheetInfoLibraryContentLayoutContainerGl93pv"
            app:layout_constraintStart_toStartOf="@+id/fragmentSheetInfoLibraryContentLayoutContainerGl7pv"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryTitle">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fragmentSheetInfoLibraryContentLayoutContainerGl7pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fragmentSheetInfoLibraryContentLayoutContainerGl93pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragmentSheetInfoLibraryContentLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragmentSheetInfoLibraryContentLayoutContainerGl93pv"
                app:layout_constraintStart_toStartOf="@+id/fragmentSheetInfoLibraryContentLayoutContainerGl7pv"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryTotalQuantityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_total_quantity"
                    android:textColor="@color/text"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryTotalQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryTotalQuantityTitle"
                    tools:text="2 items" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_name"
                    android:textColor="@color/text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryTotalQuantity" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryNameTitle"
                    tools:text="John Paesano - We Started This Together.mp3" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryPathTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_path"
                    android:textColor="@color/text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryName" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryPath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryPathTitle"
                    tools:text="/storage/emulated/0" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibrarySizeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_size"
                    android:textColor="@color/text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryPath" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibrarySize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibrarySizeTitle"
                    tools:text="23 MB" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryDateAddedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_date_added"
                    android:textColor="@color/text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibrarySize" />

                <TextView
                    android:id="@+id/fragmentSheetInfoLibraryDateAdded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentSheetInfoLibraryDateAddedTitle"
                    tools:text="16 August 2019" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>